<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    tools:context="qa.edu.qu.cse.cmps312.multimedia.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/audio_manager"
        android:onClick="buttonClicked"
        android:id="@+id/audiomanager"
        android:layout_marginBottom="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ringtone_manager"
        android:onClick="buttonClicked"
        android:id="@+id/ringtonemanager"
        android:layout_marginBottom="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/video_play"
        android:onClick="buttonClicked"
        android:id="@+id/video_play"
        android:layout_marginBottom="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/audio_recording"
        android:onClick="buttonClicked"
        android:id="@+id/audio_recording"
        android:layout_marginBottom="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:onClick="buttonClicked"
        android:id="@+id/camera"
        android:layout_marginBottom="10dp"
        android:enabled="false"/>


</LinearLayout>
